--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml" />
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml" />
     </head>
     <body>
-        <h1>Test</h1>
     </body>
 </html>
