--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml" />
     </head>
-    <body>
+    <body style="background-color:rgb(36, 37, 37);">
+        <a href="rss.xml"><img src="rss.webp" alt="RSS" width="50" height="50"></a>
     </body>
 </html>
