--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml" />
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="https://raw.githubusercontent.com/Shanibern/Efes/main/rss.xml" />
     </head>
     <body style="background-color:rgb(36, 37, 37);">
-        <a href="rss.xml"><img src="rss.webp" alt="RSS" width="50" height="50"></a>
+        <a href="https://raw.githubusercontent.com/Shanibern/Efes/main/rss.xml"><img src="rss.webp" alt="RSS" width="50" height="50"></a>
     </body>
 </html>
